test/pass/classes/check_lambda_using_self.lily
class Test
{
    define hello: Integer
    {
        return 1
    }

    var @i = ((|| hello() ))()
}
